src/sass/theme/parts/modules/_form_selector_wizard.scss
// WIZARD FORM

.wizard-selector {
  margin-top: 1rem;
}

.wizard-selector_field input {
  border: 1px solid #777;
  margin-bottom: 10px;
}

.wizard-selector_btn {
  width: 100%;
  padding: .7rem 1.6rem;
  font-size: 1rem;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 1px;
  margin-bottom: 13px;
  background-color: #8ac53f;
}

.wizard-selector_btn:hover {
  background-color: #333;
  border-color: #333;
  color: #FFF;
}

@media (max-width: 598.75px) {
  .wizard-selector_btn {
    background-color: transparent;
    border: 1px solid #333;
  }
}

// WIZARD CONTAINERS

.wizard-container {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1040;
  width: 100%;
  height: 100%;
  padding-top: 1rem;
  overflow: hidden;
	background-color: #EEE;
}

.wizard-close {
	position: fixed;
	top: 20px;
	right: 20px;
	margin-right: 10px
}

.wizard-step_title {
	margin-bottom: 1rem;
	font-size: 28px;
	font-weight: 700;
  overflow-x: hidden;
  overflow-y: hidden;
  cursor: pointer;
}

.wizard-step_container {
   width: 100%;
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   padding-bottom: 6em !important;
}

#wizard_container #date_from {
  width: 100%;
  height: 100%;
}

// WIZARD PLACE

.wizard-multi-place {
  padding: 0 1rem 1rem 1rem;
}

.wizard-multi-place_selectors {
  margin-bottom: 2rem;
}

.wizard-multi-place_btn {
  border: 1px solid #333;
  background-color: #FFF;
  color: #333;
  padding: .2rem .7rem;
  margin: 3px 0;
  font-size: .7em;
}

.wizard-multi-place_info {
  padding: 0 1rem;
}

.wizard-place_title {
  font-size: 1rem;
  font-weight: 700;
  text-transform: uppercase;
}

.wizard-place_list {
  padding-left: 0;
  list-style-type: none;
}

.wizard-place_item {
  padding: .1rem 0;
}

.selector_place {
  font-size: 14px;
  font-weight: 500!important;
  cursor: pointer;
}

.selector_place:hover {
  color: #FFF!important;
  background-color: #6fa130;
  padding: .2rem .5rem;
}

// WIZARD SUMMARY

.wizard-summary {
  margin-bottom: 2rem;
}

.wizard-summary_pickup,
.wizard-summary_return {
  font-size: 10px;
}

.wizard-summary_pickup,
.wizard-summary_datefrom {
  width: 100%;
  float: left;
}

.wizard-summary_return,
.wizard-summary_dateto {
  width: 100%;
  float: right;
  text-align: right!important;
}

.wizard-time {
  width: 80%;
}

.wizard-time_btn {
  border: 1px solid #333;
  background-color: #FFF;
  color: #333;
  padding: .3rem .9rem;
  margin: 5px 0;
  font-size: 1.4em;
  width: 100%;
}

// WIZARD CALENDAR

.wizard-date_calendar .ui-widget-content {
  background: transparent!important;
}

